--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <head>
-  <title>Build modern applications with Laravel</title>
+  <title>Backend development, concepts and practices in Laravel.</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body class="border-t-8 border-teal bg-grey-lightest">
   <div class="container mx-auto">
     <div class="flex justify-center">
-      <h1 class="w-1/3 font-thin text-4xl text-grey-darkest">
-      <span class="font-bold">Backend</span> development, concepts and <span class="font-bold">practice</span>.
+      <h1 class="w-1/3 font-thin text-4xl text-grey-darkest text-center">
+      <span class="font-bold">Backend</span> development, concepts and <span class="font-bold">practices</span> in <span class="font-bold">Laravel</span>.
       </h1>
     </div>
 
@@ -17,10 +17,10 @@
     </div>
 
     <div class="flex justify-center pt-8">
-      <form class="w-full max-w-sm">
+      <form class="w-full max-w-sm" action="https://github.us17.list-manage.com/subscribe/post?u=1ed7f21ef6996ef53b29dd64f&amp;id=5d956567aa" method="post" target="_blank">
         <div class="flex items-center border-b border-b-2 border-teal py-2">
-          <input class="appearance-none bg-transparent border-none w-full text-grey-darker mr-3 py-1 px-2" type="text" placeholder="email" aria-label="Full name">
-          <button class="flex-no-shrink bg-teal hover:bg-teal-dark border-teal hover:border-teal-dark text-lg font-thin border-4 text-white py-2 px-4 rounded" type="button">
+          <input class="appearance-none bg-transparent border-none w-full text-grey-darker mr-3 py-1 px-2" type="email" placeholder="email" name="EMAIL" required>
+          <button class="flex-no-shrink bg-teal hover:bg-teal-dark border-teal hover:border-teal-dark text-lg font-thin border-4 text-white py-2 px-4 rounded" type="submit">
             Sign Up
           </button>
         </div>
