Update info on index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="flex justify-center pt-8">
-      <p class="w-1/3 text-grey-darkest font-thin tracking-wide">A complete course on building applications with modern technologies and software practices.</p>
+      <p class="w-1/3 text-grey-darkest font-thin tracking-wide">A complete in-class course on building applications with modern technologies and software practices.</p>
     </div>
 
     <div class="flex justify-center pt-8">
