--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="flex justify-center pt-8">
-      <form class="w-full max-w-sm" action="https://github.us17.list-manage.com/subscribe/post?u=1ed7f21ef6996ef53b29dd64f&amp;id=5d956567aa" method="post" target="_blank">
+      <form class="w-full max-w-sm" action="https://github.us17.list-manage.com/subscribe/post?u=1ed7f21ef6996ef53b29dd64f&amp;id=5d956567aa" method="post">
         <div class="flex items-center border-b border-b-2 border-teal py-2">
           <input class="appearance-none bg-transparent border-none w-full text-grey-darker mr-3 py-1 px-2" type="email" placeholder="email" name="EMAIL" required>
           <button class="flex-no-shrink bg-teal hover:bg-teal-dark border-teal hover:border-teal-dark text-lg font-thin border-4 text-white py-2 px-4 rounded" type="submit">
